Fixed horizontal scroll on cover

--- a/site/style.css
+++ b/site/style.css
@@ -62,7 +62,7 @@ body.dark #darkModeGlow { opacity: 1; }
 }
 
 /* CONTENT */
-.cover { width: 100vw; display: flex; flex-direction: column; align-items: center; }
+.cover { width: 100%; display: flex; flex-direction: column; align-items: center; }
 .cover > img { width: auto; max-height: 50vh; }
 .content { margin-top: calc(var(--cap-height) * 2); }
 .cover + .content { margin-top: 0; }
